--- a/_posts/2015-12-24-chapter-1.markdown
+++ b/_posts/2015-12-24-chapter-1.markdown
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "Welcome to Jekyll!"
+title:  "Chapter 1"
 date:   2015-12-24 13:01:16 -0800
-categories: jekyll update
+categories: neuromechanics update
 ---
 
 # Chapter 1 Content
