--- a/ch10.md
+++ b/ch10.md
@@ -1,11 +1,10 @@
-# Chapter 10: Introduction  (*under construction*)
+# Chapter 10: Implications  (*under construction*)
 *Last updated Dec. 26 2015 by Francisco Valero-Cuevas*
 
 **Abstract:**
 _________
+This book is deliberately a short introduction to the mathematical and anatomical foundations of neuromechanics. My hope is that you will take these concepts and challenge, modify, extend, and leverage them to advance the science of neuromuscular control and its related areas, such as robotics, musculoskeletal modeling, computational neuroscience, rehabilitation, and evolutionary biology. Having established a common language, conceptual framework, and computational repertoire, I discuss several implications of this neuromechanical perspective. My intent is that my presentation of several issues, research directions, tenets, and debates, however brief, will inspire and encourage you in your research.
 
-
-Abstract text is here
 
 
 **Forum and commentary:**
