added frontmatter to all chapters

--- a/book_chapters/ch10.md
+++ b/book_chapters/ch10.md
@@ -1,3 +1,8 @@
+---
+layout: page
+title: Chapter 10
+---
+
 # Chapter 10: Implications  (*under construction*)
 *Last updated Dec. 26 2015 by Francisco Valero-Cuevas*
 
