--- a/dare2023.md
+++ b/dare2023.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: DARE 2023 Conference
-permalink: /DARE-2023/
+permalink: /dare2023/
 menu: main
 navigation_weight: 8
 ---
