--- a/dare2023.md
+++ b/dare2023.md
@@ -5,4 +5,6 @@ permalink: /dare2023/
 menu: main
 navigation_weight: 8
 ---
-## The future home of the DARE 2023 conference
+# Save the date March, 3rd and 4th of 2023 for the DARE CONFERENCE ON
+## At the University of SouthernCalifornia in Los Angeles
+
