--- a/dare2023.md
+++ b/dare2023.md
@@ -5,6 +5,7 @@ permalink: /dare2023/
 menu: main
 navigation_weight: 8
 ---
-# Save the date March, 3rd and 4th of 2023 for the DARE CONFERENCE ON
+# Save the date March, 3rd and 4th of 2023 for the DARE CONFERENCE
+
 ## At the University of SouthernCalifornia in Los Angeles
 
