--- a/dare2023.md
+++ b/dare2023.md
@@ -7,5 +7,5 @@ navigation_weight: 8
 ---
 # Save the date March, 3rd and 4th of 2023 for the DARE CONFERENCE
 
-## At the University of SouthernCalifornia in Los Angeles
+At the University of SouthernCalifornia in Los Angeles
 
